--- a/src/styles/bus/create.module.scss
+++ b/src/styles/bus/create.module.scss
@@ -8,13 +8,14 @@
   border-left: none;
   border-radius: 0 10px 10px 0;
   overflow: hidden;
-
+  
   @include min {
     border: 1.6px solid var(--color-grey-1);
     border-radius: 10px;
   }
-
+  
   @include lg {
+    width: 56%;
     border-radius: 50px 0 0 50px;
     border-width: 5px;
     border-right: none;
@@ -26,18 +27,10 @@
 
   // background
   > :first-child {
-    border-radius: 0 10px 10px 0;
     display: block;
     position: static;
     width: 100%;
     height: 100%;
-
-    @include min {
-      border-radius: 10px;
-    }
-    @include lg {
-      border-radius: 50px 0 0 50px;
-    }
   }
 
   // horizontal pipe
