--- a/src/styles/bus/windowThree.module.scss
+++ b/src/styles/bus/windowThree.module.scss
@@ -1,6 +1,9 @@
 @use "/src/styles/mixins" as *;
 
 .container {
+  display: flex;
+  flex-direction: column;
+
   @include lg {
     display: flex;
     flex-direction: row-reverse;
@@ -9,7 +12,39 @@
   }
 }
 
-.info {
+.divider {
+  display: none;
+
+  @include lg {
+    display: block;
+    margin-top: -8px;
+    margin-bottom: -8px;
+    background-color: var(--color-grey-1);
+    width: 15px;
+    border-radius: 50px;
+  }
+}
+
+.handle {
+  display: none;
+
+  @include lg {
+    display: block;
+    min-width: 5px;
+    height: 70px;
+    margin-left: 10%;
+    background-color: #aeaeae;
+    border-radius: 50px;
+  }
+
+  @include rwd(1358px) {
+    margin-left: 15%;
+  }
+}
+
+.left {
+  display: flex;
+  flex-grow: 1;
   padding: 30px;
   border: 1.6px solid var(--color-grey-1);
   border-left: none;
@@ -19,32 +54,42 @@
   @include min {
     border: 1.6px solid var(--color-grey-1);
     border-radius: 10px;
-    flex-grow: 1;
   }
+
   @include lg {
+    align-items: center;
+    justify-content: right;
     margin-bottom: 0;
     border-radius: 50px 0 0 50px;
     border-width: 5px;
     border-right: none;
-    padding: 91px 58px 79px 125px;
+    padding: 24px 16px 24px 24px;
   }
+}
+
+.info {
   strong {
     display: block;
-    @include fontFactory(var(--dm-mono), 30px, 500, var(--color-teal-3), 0, 39px);
-    @include lg {
-      font-size: 40px;
-      line-height: 52.08px;
-    }
+    @include fontFactory(var(--dm-mono), 30px, 500, var(--color-teal-3), 0, 1.3);
+    
     > span {
       color: var(--color-teal-2);
-
+      
       &.space {
         letter-spacing: -0.24rem;
       }
     }
-
+    
     &:last-of-type {
       margin-bottom: 24px;
+    }
+
+    @include lg {
+      font-size: 2.9vw;
+    }
+    
+    @include rwd(1358px) {
+      font-size: 40px;
     }
   }
   
@@ -54,8 +99,9 @@
     border-radius: 100px;
     background-color: var(--color-ducky);
     box-shadow: 0px 9px 25px rgba(0, 0, 0, 0.15);
-  }
-  button:hover {
-    cursor: pointer;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
